--- a/src/finalproject340/generalMedicalHistoryForm.form
+++ b/src/finalproject340/generalMedicalHistoryForm.form
@@ -311,6 +311,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtPatientID">
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JButton" name="btnStartInterview">
           <Properties>
